# Cogito

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  comparison-with-akashic-agent.md  config.example.toml  debug_test.py  manifest.json  must.md  pyproject.toml  test_debug.py  文档清单.txt
.github/: pull_request_template.md
.github/workflows/: ci.yml
.md/: Cogito-Agent_PersistencePhase_最终实现规范.md  Cogito_v1_agentloop_abstract_skeleton_plan.md  KnowledgeExtractionPhase-正式实现规格.md  TurnFinalizePhase-实施计划.md  TurnFinalizePhase_具体实现路径.md  TurnInitPhase_具体实现路径.md  agent-loop-phase-final-implementation-spec.md  cogito-agent-initial-framework-spec.md  cogito-agent-tool-system-final-spec.md  context-assembly-phase-implementation-guide.md  context-management-research.md  database-design.md  information-retrieval-phase-final-design.md  message-system-plan.md  personal_agent_sqlite_database_design.md  provider-system-plan.md  reference-comparison-report.md  state-load-phase-implementation-guide.md
.workspace/reports/: Cogito与memU记忆系统对比分析.md
cogito/: __init__.py  __main__.py
cogito/agent/: __init__.py
cogito/application/: __init__.py  contracts.py  embedding_worker.py  envelopes.py  ports.py  state_machines.py
cogito/bootstrap/: __init__.py  application.py  providers.py
cogito/bus/: event_bus.py  events.py  events_lifecycle.py  hooks.py  inbound.py
cogito/channels/: __init__.py  contract.py  registry.py  web.py
cogito/config/: __init__.py  errors.py  loader.py  schema.py
cogito/database/: __init__.py  connection.py  ids.py  manager.py  migrations.py  schema.py  utils.py
cogito/delivery/: __init__.py  manager.py
cogito/domain/: __init__.py  commands.py  entities.py  enums.py  errors.py  events.py  value_objects.py
cogito/infrastructure/: __init__.py  config.py  repositories.py
cogito/llm/: __init__.py  backend.py  capabilities.py  embedding.py  errors.py  protocol.py  registry.py  request.py  response.py  service.py  stream.py
cogito/tools/: __init__.py  executor.py
cogito/turns/: __init__.py  runner.py
docs/architecture/: current-dependency-map.md  invariant-verification-matrix.md
docs/operations/: drift.md  proactive.md  qq-onebot.md
markdown/00_guides/: 00_文档索引与Agent阅读指南.md  01_术语表.md  02_架构决策记录指南.md
markdown/01_architecture/: 00_总体架构设计.md  01_核心领域模型与数据契约.md  02_全局不变量.md  03_系统边界与依赖规则.md
markdown/02_runtime/: 00_运行机制与端到端流程.md  01_Agent运行时认知与模型.md  02_执行生命周期与恢复.md  03_Session上下文与顺序.md  04_AgentLoop执行协议.md  05_检索与上下文装配策略.md  06_长期记忆生命周期.md  07_模型适配层.md
markdown/03_capabilities/: 00_能力工具MCP与插件.md  01_Tool执行与Sandbox.md
markdown/04_background/: 00_数据事件主动系统与任务.md  01_Task与Scheduler.md  02_EventInbox与Outbox.md  03_Connector数据摄取.md  04_主动推送与后台空闲处理.md
markdown/05_interaction/: 00_接入交互身份与投递.md  01_审批与命令.md  02_流式投递.md  03_消息持久化与历史.md  04_LangBotBridge契约.md
markdown/06_infrastructure/: 00_存储一致性与数据治理.md  01_部署配置测试与架构治理.md  02_配置与Profile.md  03_数据库Schema与Migration.md  04_本地部署与运行手册.md
markdown/07_quality/: 00_安全策略可观察性与资源治理.md  01_可观察性与审计.md  02_测试回放与质量评估.md
mcp-catalog/: README.md  context7.toml  fetch.toml  github-readonly.toml  web-search.toml
plan/: 01_下一阶段开发计划.md  01_架构边界与领域契约下一步开发计划.md  02_PR8.3可靠性阶段收尾计划.md  02_可运行单机Agent基线开发计划.md  02_运行时认知检索与恢复下一步开发计划.md  03_ModelAdapter与AgentLoop下一阶段开发计划.md  03_QQ-OneBot-Channel完整闭环开发计划.md  03_能力工具Sandbox与插件下一步开发计划.md  04_Web-Channel-接入主链路开发计划.md  04_后台任务Connector事件与主动系统下一步开发计划.md  05_交互身份消息与投递下一步开发计划.md  05_流式投递实现计划.md  06_存储配置部署与数据治理下一步开发计划.md  07_剩余任务收尾计划.md  08_Dashboard需求与设计文档.md  10_残余违规清零与可发布闭环开发计划.md  11_DeliveryGatewayPlugin与入站契约收口计划.md  12_vision.md  13_记忆系统治理与内容记忆增强开发计划.md  14_PLAN13生产闭环修复计划.md  14_Proactive闭环与安全Drift开发计划.md  15_PLAN14-R7-R10收口计划.md  16_PLAN14非测试生产缺口修复计划.md  17_PLAN14生产真实性收口修复计划.md  18_P16-13-16_payload_retrieval_reports.md  Plan 01：Core 消息到真实模型回复闭环.md  长期记忆.md  长期记忆落地计划.md  长期记忆补全与验收计划.md
plan/event-store-cutover/: 00-execution-rules.md  01-baseline-and-guardrails.md  02-event-contract-and-store.md  03-replay-consumers-and-effects.md  04-interaction-runtime-delivery.md  05-task-scheduler-delegation.md  06-connector-memory-knowledge.md  07-proactive-drift-multimodal.md  08-api-web-and-event-explorer.md  09-remove-legacy-state.md  10-cutover-migration.md  11-verification-and-release.md  README.md
prompts/: system.md
scripts/: chat_demo.py  debug_payload.py  demo_session.db  demo_session_export.json  generate_demo_session.py  run.py  start_app.py  test_models.py  test_phase1.py  test_phase1_out.txt  test_phase2.py  test_phase3.py  test_qwen_thinking.py  test_real_extraction.py  test_thinking.py  test_vision.py
scripts/poc_memu/: README.md  __init__.py  cogito_backend.py  dataset.py  metrics.py  protocol.py  report.py  run_cogito.py  run_memu.py
service/: delivery_effect_payload.py  event_bridge.py  event_effect_recovery.py  event_effect_worker.py  event_replay.py
src/cogito/: __init__.py  __main__.py  application.py  capability_diagnostics.py  config.py
tests/: conftest.py  test_inbound_immediate_eval.py  test_inbound_service_preemption.py
tests/agent/: __init__.py
tests/application/: test_embedding_worker.py
tests/architecture/: _scan.py  legacy_table_inventory.py  test_approval_resume.py  test_backup_startup.py  test_capability_registry.py  test_command_envelope.py  test_config_restore_runbook.py  test_contracts.py  test_dependency_rules.py  test_event_outbox.py  test_facades.py  test_feedback_drift.py  test_infrastructure.py  test_invariants.py  test_legacy_table_scan.py  test_memory_lifecycle.py  test_model_adapter_contracts.py  test_patches.py  test_plugin_skill_governance.py  test_reconcile.py  test_recovery.py  test_recovery_decision.py  test_resource_budget.py  test_retrieval_offline_eval.py  test_sandbox.py  test_session_resolver.py  test_skill_parser.py  test_task_attempt_convergence.py  test_tool_execution_chain.py
tests/bootstrap/: __init__.py  test_providers.py
tools/: bench_inproc.py  bench_minimal.py  bench_ws_latency.py
web/: index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
(+890 files in other folders)
