[project]
name = "cogito"
version = "0.1.0"
description = "Cogito — 主动式个人 Agent 框架"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "hunriiz" }]
dependencies = [
    "pydantic>=2.0",
    "mcp>=1.0",
]

[project.scripts]
cogito = "cogito.__main__:main"

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.11", "pytest-asyncio>=0.24"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
"src/cogito/store/schema.py" = ["E501"]
"src/cogito/domain/*.py" = ["E501"]
"src/cogito/service/completion.py" = ["E501"]
"src/cogito/service/recovery_service.py" = ["E501"]
"src/cogito/service/delivery_worker.py" = ["E501"]
"src/cogito/service/inbound_service.py" = ["E501"]
"src/cogito/store/repositories.py" = ["E501"]
"tests/**/*.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
