[project]
name = "cogito"
version = "0.1.0"
description = "Cogito — 主动式个人 Agent 框架"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "hunriiz" }]
dependencies = [
    "pydantic>=2.0",
    "mcp>=1.0",
]

[project.scripts]
cogito = "cogito.__main__:main"

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.11", "pytest-asyncio>=0.24"]

[tool.ruff]
line-length = 100
target-version = "py312"
# Plan 02 / RUNNABLE-BASELINE-01 — Legacy Channel Adapters 隔离出 lint 门禁。
# 退出隔离条件: (a) 首个真实 Channel 开发时逐个可导入性验证; (b) 17 个 adapter 与 Core 解耦。
exclude = [
    "src/cogito/channel",
]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
# Pre-existing in Core (E501 line-length historical) — 不纳入本切片; 后续 PR 逐步修复。
"src/cogito/store/schema.py" = ["E501"]
"src/cogito/domain/*.py" = ["E501"]
"src/cogito/service/completion.py" = ["E501"]
"src/cogito/service/recovery_service.py" = ["E501"]
"src/cogito/service/delivery_worker.py" = ["E501"]
"src/cogito/service/inbound_service.py" = ["E501"]
"src/cogito/service/channel_gateway.py" = ["E501"]
"src/cogito/service/memory_extractor.py" = ["E501"]
"src/cogito/service/task_handlers.py" = ["E501"]
"src/cogito/store/repositories.py" = ["E501"]
"src/cogito/store/watermark_repo.py" = ["E501"]
"src/cogito/store/memory_repo.py" = ["E501"]
"src/cogito/store/tool_call_repo.py" = ["E501"]
"src/cogito/capability/executor.py" = ["E501"]
# 历史遗留 (E402/F841/F821/F401/I001/UP041 等) — 后续 PR 清理；本切片不动。
"src/cogito/service/agent_runner.py" = ["E402", "F821"]
"src/cogito/service/task_worker.py" = ["E402"]
"src/cogito/runtime/loop.py" = ["E402", "E501"]
"src/cogito/store/task_repo.py" = ["F841"]
"src/cogito/service/embedding.py" = ["F401"]
"src/cogito/service/memory_views.py" = ["F401"]
"src/cogito/service/retrieval_service.py" = ["F401", "I001"]
"src/cogito/store/query_plan.py" = ["UP041"]
"tests/**/*.py" = ["E501", "E402", "F841", "F401", "I001", "F541"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
